--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set version = "6.0.0" %}  # PEP 386
 {% set source_version = version %}
 {% set base_version = version %}
-{% set number = "4" %}
+{% set number = "5" %}
 {% set cuda_enabled = cuda_compiler_version is not undefined and cuda_compiler_version == '11.0' %}
 {% set build_ext_version = "1.0.0" %}
 {% set build_ext = "cuda" if cuda_enabled else "cpu" %}
@@ -26,10 +26,11 @@ source:
   sha256: a36d91227135e9ec8641b5f46e80927aaafce117f3446933dd7f392c9659996e
   patches:
     - 0003-Fix-HeavyDBE-build.patch
+    - 0004-Fix-Windows-build.patch  # [win]
 
 build:
   number: {{ number }}
-  skip: true  # [cuda_compiler_version not in (undefined, "None", "11.0") or not linux64]
+  skip: true  # [cuda_compiler_version not in (undefined, "None", "11.0")]
 
 outputs:
 
@@ -281,6 +282,8 @@ outputs:
             heavydb --version                         # [unix and cuda_compiler_version not in (undefined, "None")]
             rm -rf data                               # [unix and cuda_compiler_version not in (undefined, "None")]
           fi                                          # [unix and cuda_compiler_version not in (undefined, "None")]
+        - test -f ${PREFIX}/{{ install_base }}/QueryEngine/cuda_mapd_rt.fatbin  # [unix and cuda_compiler_version not in (undefined, "None")]
+        - test -f ${PREFIX}/{{ install_base }}/QueryEngine/CudaTableFunctions.a  # [unix and cuda_compiler_version not in (undefined, "None")]
         # these are provided by heavydb-common package:
         - which heavydb_insert_sample_data  # [unix]
         - which startheavy  # [unix]
