--- a/.ci_support/linux_64_c_compiler_version11cuda_compiler_versionNonecxx_compiler_version11.yaml
+++ b/.ci_support/linux_64_c_compiler_version11cuda_compiler_versionNonecxx_compiler_version11.yaml
@@ -25,7 +25,7 @@ docker_image:
 fmt:
 - '9'
 geos:
-- 3.11.0
+- 3.11.1
 gflags:
 - '2.2'
 glog:
@@ -44,6 +44,9 @@ libthrift:
 - 0.16.0
 ncurses:
 - '6'
+openssl:
+- 1.1.1
+- '3'
 pin_run_as_build:
   boost-cpp:
     max_pin: x.x.x
