--- a/.ci_support/win_64_cuda_compiler_versionNone.yaml
+++ b/.ci_support/win_64_cuda_compiler_versionNone.yaml
@@ -15,7 +15,7 @@ cxx_compiler:
 fmt:
 - '9'
 geos:
-- 3.11.0
+- 3.11.1
 gflags:
 - '2.2'
 glog:
@@ -36,6 +36,9 @@ libthrift:
 - 0.16.0
 ncurses:
 - '6'
+openssl:
+- 1.1.1
+- '3'
 pin_run_as_build:
   boost-cpp:
     max_pin: x.x.x
