--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -8,8 +8,11 @@ jobs:
     vmImage: windows-2019
   strategy:
     matrix:
-      win_64_cuda_compiler_versionNone:
-        CONFIG: win_64_cuda_compiler_versionNone
+      win_64_cuda_compiler_versionNoneopenssl1.1.1:
+        CONFIG: win_64_cuda_compiler_versionNoneopenssl1.1.1
+        UPLOAD_PACKAGES: 'True'
+      win_64_cuda_compiler_versionNoneopenssl3:
+        CONFIG: win_64_cuda_compiler_versionNoneopenssl3
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
   variables:
