--- a/.ci_support/linux_64_c_compiler_version9cuda_compiler_version11.0cxx_compiler_version9openssl3.yaml
+++ b/.ci_support/linux_64_c_compiler_version9cuda_compiler_version11.0cxx_compiler_version9openssl3.yaml
@@ -1,17 +1,27 @@
 boost_cpp:
 - 1.78.0
 c_compiler:
-- vs2019
+- gcc
+c_compiler_version:
+- '9'
+cdt_name:
+- cos7
 cgo_compiler:
 - go-cgo
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
 cuda_compiler_version:
-- None
+- '11.0'
 cxx_compiler:
-- vs2019
+- gxx
+cxx_compiler_version:
+- '9'
+docker_image:
+- quay.io/condaforge/linux-anvil-cuda:11.0
 fmt:
 - '9'
 geos:
@@ -22,8 +32,6 @@ glog:
 - '0.6'
 libarchive:
 - '3.6'
-libevent:
-- 2.1.10
 libgdal:
 - '3.6'
 libkml:
@@ -37,18 +45,33 @@ libthrift:
 ncurses:
 - '6'
 openssl:
-- 1.1.1
 - '3'
 pin_run_as_build:
   boost-cpp:
     max_pin: x.x.x
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- 3.10.* *_cpython
+- 3.11.* *_cpython
+- 3.8.* *_73_pypy
+- 3.8.* *_cpython
+- 3.9.* *_73_pypy
+- 3.9.* *_cpython
 snappy:
 - '1'
 target_platform:
-- win-64
+- linux-64
 tbb:
 - '2021'
 tbb_devel:
 - '2021'
 xerces_c:
 - '3.2'
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
+  - cuda_compiler_version
+  - cdt_name
+  - docker_image
