--- a/.ci_support/win_64_cuda_compiler_versionNoneopenssl3.yaml
+++ b/.ci_support/win_64_cuda_compiler_versionNoneopenssl3.yaml
@@ -1,27 +1,17 @@
 boost_cpp:
 - 1.78.0
 c_compiler:
-- gcc
-c_compiler_version:
-- '9'
-cdt_name:
-- cos7
+- vs2019
 cgo_compiler:
 - go-cgo
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
-- '11.0'
+- None
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '9'
-docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.0
+- vs2019
 fmt:
 - '9'
 geos:
@@ -32,6 +22,8 @@ glog:
 - '0.6'
 libarchive:
 - '3.6'
+libevent:
+- 2.1.10
 libgdal:
 - '3.6'
 libkml:
@@ -45,34 +37,17 @@ libthrift:
 ncurses:
 - '6'
 openssl:
-- 1.1.1
 - '3'
 pin_run_as_build:
   boost-cpp:
     max_pin: x.x.x
-  python:
-    min_pin: x.x
-    max_pin: x.x
-python:
-- 3.10.* *_cpython
-- 3.11.* *_cpython
-- 3.8.* *_73_pypy
-- 3.8.* *_cpython
-- 3.9.* *_73_pypy
-- 3.9.* *_cpython
 snappy:
 - '1'
 target_platform:
-- linux-64
+- win-64
 tbb:
 - '2021'
 tbb_devel:
 - '2021'
 xerces_c:
 - '3.2'
-zip_keys:
-- - c_compiler_version
-  - cxx_compiler_version
-  - cuda_compiler_version
-  - cdt_name
-  - docker_image
