--- a/.ci_support/linux_64_c_compiler_version12cuda_compiler_versionNonecxx_compiler_version12.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cuda_compiler_versionNonecxx_compiler_version12.yaml
@@ -3,29 +3,27 @@ boost_cpp:
 c_compiler:
 - gcc
 c_compiler_version:
-- '9'
+- '12'
 cdt_name:
-- cos7
+- cos6
 cgo_compiler:
 - go-cgo
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
-- '11.0'
+- None
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '9'
+- '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.0
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 fmt:
 - '9'
 geos:
-- 3.11.1
+- 3.11.2
 gflags:
 - '2.2'
 glog:
@@ -41,7 +39,7 @@ libpng:
 librdkafka:
 - '1.9'
 libthrift:
-- 0.18.0
+- 0.18.1
 ncurses:
 - '6'
 openssl:
