--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,11 @@
 {% set version = "6.4.0" %}  # PEP 386
 {% set source_version = version %}
 {% set base_version = version %}
-{% set number = "0" %}
+{% set build = "1" %}
 {% set cuda_enabled = cuda_compiler_version is not undefined and cuda_compiler_version == '11.0' %}
 {% set build_ext_version = "1.0.0" %}
 {% set build_ext = "cuda" if cuda_enabled else "cpu" %}
-{% set build_string = "h{}_{}".format(PKG_HASH, number) %}
+{% set build_string = "h{}_{}".format(PKG_HASH, build) %}
 {% set build_string_ext = "{}_{}".format(build_string, build_ext) %}
 {% set py_build_string_ext = "py{}{}_{}".format(CONDA_PY, build_string, build_ext) %}
 {% set py_build_string = "py{}{}".format(CONDA_PY, build_string) %}
@@ -29,16 +29,8 @@ source:
     - 0007-Fix-Linux-build-heavydb-640.patch  # [linux64]
 
 build:
-  number: {{ number }}
+  number: {{ build }}
   skip: true  # [cuda_compiler_version not in (undefined, "None", "11.0")]
-
-# add global dependency section to ensure we run
-# separate builds for different openssl versions
-requirements:
-  build:
-    - {{ compiler('cxx') }}
-  host:
-    - openssl
 
 outputs:
 
@@ -110,6 +102,7 @@ outputs:
         - tbb-devel  # [win]
         - thrift-cpp {{ thrift_version }}
         - winflexbison  # [win]
+        - openssl
     test:
       commands:
         # Test installation
@@ -320,8 +313,6 @@ outputs:
       script: python -m pip install -vv --no-deps python/.
       run_exports:
         - {{ pin_subpackage('pyheavydb',  max_pin='x.x.x') }}
-      ignore_run_exports:
-        - openssl
     requirements:
       host:
         - pip
